# clichefactory-mcp

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml  todo-before-launch.md
cliche_mcp/: __init__.py  helpers.py  server.py
integrations/openclaw/: SKILL.md
