[project]
name = "clichefactory-mcp"
version = "0.1.0"
description = "MCP server for ClicheFactory — structured data extraction from documents"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "clichefactory",
    # Local parsing/OCR stack (mirrored from clichefactory[local])
    "pymupdf>=1.25.0,<1.26.0",
    "docling>=2.67.0,<2.71.0",
    "openpyxl>=3.1.0,<3.3.0",
    "python-docx>=1.2.0,<1.4.0",
    "pillow>=10.0.0,<11.0.0",
    "rapidocr>=3.3.0,<4.0.0",
    "pytesseract>=0.3.10,<0.3.15",
    "tesserocr>=2.7.0,<2.9.0",
    "pypdf>=4.0.0,<4.2.0",
]

[project.scripts]
clichefactory-mcp = "cliche_mcp:main"

[tool.uv.sources]
clichefactory = { path = "../aio" }

[tool.setuptools.packages.find]
include = ["cliche_mcp", "cliche_mcp.*"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
