[project]
name = "clichefactory-mcp"
dynamic = ["version"]
description = "MCP server for ClicheFactory — structured data extraction from documents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Urban Susnik s.p.", email = "info@clichefactory.com"}]
requires-python = ">=3.12"
keywords = ["mcp", "document-extraction", "ocr", "pdf", "llm", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp[cli]>=1.0.0,<2",
    "clichefactory>=0.3.0",
]

[project.optional-dependencies]
# Full local parsing/OCR stack (~2 GB). Install via: pip install clichefactory-mcp[local]
local = ["clichefactory[local]"]

[project.scripts]
clichefactory-mcp = "cliche_mcp:main"

[project.urls]
Homepage = "https://clichefactory.com"
Repository = "https://github.com/nouveau-rubynho/clichefactory-mcp"

[tool.hatch.version]
path = "cliche_mcp/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["cliche_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
